# ceph-rgw-benchmarking

./: .pre-commit-config.yaml  README.md  environment  eslint.config.mjs  list_bench_buckets.py  mixed.js  package.json  prepare.py  pyproject.toml  pyrightconfig.json  requirements.txt  s3_breakpoint.fio
k6/: eslint.config.mjs  mixed.js  package-lock.json  package.json
k8s/: mtail.k8s.yaml  perses.k8s.yaml  plutono.k8s.yaml  prometheus.k8s.yml
mtail/: rgw.mtail
testrun-templates/: common.configmap.k8s.yaml  get.yaml  put.yaml
